fixed two scrollbars prob

--- a/src/assets/sass/imports/_course-details.scss
+++ b/src/assets/sass/imports/_course-details.scss
@@ -8,9 +8,6 @@
     }
 
     .course-content {
-        height: calc(100vh - 76px);
-        overflow-y: auto;
-        overflow-x: hidden;
         background-color: #fff;
         z-index: 4;
 
